--- a/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
@@ -93,35 +93,6 @@
         app:atg_checkedBackgroundColor="@color/black"
         app:atg_checkedBorderColor="@color/transparent"
         app:atg_checkedTextColor="@color/white"
-        android:layout_marginTop="10dp" /><![CDATA[
-        android:layout_marginRight="60dp"/>
-
-    ]]>
-
-    <Button
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:background="@drawable/round_button"
-        android:gravity="center_vertical|center_horizontal"
-        android:drawableTop="@drawable/drawer_photo"
-        android:adjustViewBounds="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="takePic"
-        android:id="@+id/button2" />
-
-    <Button
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:background="@drawable/round_button"
-        android:gravity="center_vertical|center_horizontal"
-        android:drawableTop="@drawable/drawer_photo"
-        android:adjustViewBounds="true"
-        android:onClick="takePhotoFromGallery"
-        android:id="@+id/button3"
-        android:layout_above="@+id/button2"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_marginTop="10dp" />
 
 </RelativeLayout>
