--- a/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:id="@+id/layoutFragmentEditNote"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="icynote.ui.EditNote">
+    tools:context="icynote.ui.fragments.EditNote">
 
     <include layout="@layout/menu_button" />
 
@@ -48,7 +48,7 @@
         android:layout_height="50dp"
         android:background="@drawable/note_open_metadata"
         android:alpha="0"
-        android:onClick="openSettings"
+        android:onClick="openMetadata"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
@@ -84,13 +84,7 @@
         app:atg_isAppendMode="true"
         app:atg_inputHint="add ..."
         android:layout_marginTop="10dp" />
-        <!--
-        app:atg_borderColor="@color/gray"
-        app:atg_backgroundColor="@color/white"
-        app:atg_textColor="@color/black"
-        app:atg_checkedBackgroundColor="@color/black"
-        app:atg_checkedBorderColor="@color/transparent"
-        app:atg_checkedTextColor="@color/white" -->
+
 </RelativeLayout>
 
 
