--- a/IcyNote/app/src/main/res/layout/fragment_edit_tags.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_edit_tags.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="icynote.ui.EditTags">
+    tools:context="icynote.ui.fragments.EditTags">
 
     <TextView
         android:id="@+id/editTagsView"
