Hand copy-pasted UI

--- a/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
@@ -22,6 +22,7 @@
         android:textStyle="normal|bold"
         android:textSize="@dimen/titleSize"
         android:hint="@string/noteDisplayTitleHint"
+        android:textColor="@color/textColor"
         android:textColorHint="@color/hintColor"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="50sp"
@@ -63,6 +64,7 @@
         android:gravity="top|start"
         android:scrollbars="vertical"
         android:hint="@string/noteDisplayTextHint"
+        android:textColor="@color/textColor"
         android:textColorHint="@color/hintColor"
         android:layout_below="@+id/noteDisplayTitleText"
         android:layout_alignParentLeft="true"
@@ -81,7 +83,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
 
-
+        style="@style/TagGroup"
         app:atg_isAppendMode="true"
         app:atg_inputHint="add ..."
         app:atg_borderColor="@color/gray"
