--- a/IcyNote/app/src/main/res/values/styles.xml
+++ b/IcyNote/app/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
 
     <style name="AppTheme.Bright">
         <item name="android:textColor">@color/black</item>
-	</style>
+    </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
@@ -56,6 +56,14 @@
     <style name="ThemeOverlay.MyTitleText" parent="AppTheme">
         <item name="android:gravity">center</item>
         <item name="android:textSize">36sp</item>
+    </style>
+
+    <style name="notesSeparator">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:layout_marginBottom">2sp</item>
+        <item name="android:layout_marginTop">2sp</item>
+        <item name="android:background">@color/black</item>
     </style>
 
 </resources>
