--- a/IcyNote/app/src/main/res/layout/fragment_notes_list.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_notes_list.xml
@@ -8,12 +8,109 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="icynote.ui.NotesList">
 
-    <TextView
-        android:id="@+id/listNotesView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="LIST NOTES VIEW" />
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/activity_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="1"
+        >
+
+        <RelativeLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:layout_weight="0.1"
+            android:id="@+id/layout_1"
+            >
+
+            <Button
+                android:text="Search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/btSearch"
+                android:background="@color/backgroundColorSpinnerBright"
+                android:layout_alignParentRight="true" />
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/editText"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:imeOptions="actionSearch"
+                android:textColor="@color/textColor"
+                android:hint="The String to find ..."
+                android:textColorHint="@color/textColor"
+                android:visibility="invisible" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layout_1"
+            android:layout_alignParentRight="true"
+            android:layout_weight="0.8"
+            android:id="@+id/layout_2"
+            >
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/backgroundColor"
+                android:id="@+id/lvNotes"
+                android:layout_centerHorizontal="true" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/layout_3"
+            android:layout_below="@id/layout_2"
+            android:layout_alignParentRight="true"
+            android:layout_weight="0.1" >
+
+            <Button
+                android:text="Add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/btAdd"
+                android:background="@color/backgroundColorSpinnerBright"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"/>
+
+            <TextView
+                android:id="@+id/tvNumNotes"
+                android:text="Number Notes"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:textColor="@color/textColor"/>
+
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/spinner"
+                android:background="@color/backgroundColorSpinnerBright"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
     <include layout="@layout/menu_button"/>
 
