--- a/IcyNote/app/src/main/res/layout/fragment_notes_list.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_notes_list.xml
@@ -8,6 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="icynote.ui.fragments.NotesList">
 
+    <include layout="@layout/menu_button"/>
 
     <LinearLayout
         android:id="@+id/activity_main"
@@ -26,45 +27,27 @@
             android:id="@+id/layout_1"
             >
 
-            <Button
-                android:text="Search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/btSearch"
-                android:layout_alignParentRight="true" />
-
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:ems="10"
-                android:id="@+id/editText"
+                android:id="@+id/searchBar"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
-                android:imeOptions="actionSearch"
-                android:hint="The String to find ..."
-                android:visibility="invisible" />
+                android:hint="Loading..."
+                android:visibility="visible"
+                android:enabled="false"
+                android:imeOptions="actionDone"/>
 
         </RelativeLayout>
 
-        <!-- <RelativeLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/layout_1"
-            android:layout_alignParentRight="true"
-            android:layout_weight="0.8"
-            android:id="@+id/layout_2"
-            > -->
 
             <ListView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/layout_1"
-                android:layout_alignParentRight="true"
+                android:layout_height="0dp"
                 android:id="@+id/lvNotes"
-                android:layout_weight="1"
-                />
+                android:layout_weight="1" />
 
         <!-- </RelativeLayout> -->
 
@@ -83,11 +66,12 @@
                 android:id="@+id/btAdd"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true"
+                android:enabled="false"/>
 
             <TextView
                 android:id="@+id/tvNumNotes"
-                android:text="Number Notes"
+                android:text="Loading..."
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_centerVertical="true"
@@ -100,12 +84,11 @@
                 android:id="@+id/btDelete"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true"
+                android:enabled="false"/>
 
         </RelativeLayout>
 
     </LinearLayout>
-
-    <include layout="@layout/menu_button"/>
 
 </FrameLayout>
