--- a/IcyNote/app/src/main/res/layout/fragment_metadata_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_metadata_note.xml
@@ -16,6 +16,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:id="@+id/backButton"
+        android:onClick="reOpenEditNote"
         android:background="@drawable/meta_back"
         android:alpha="0.5"/>
 
@@ -24,26 +25,55 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="101dp"
+        android:layout_marginTop="70dp"
         android:id="@+id/layout">
+
+        <LinearLayout
+            android:id="@+id/pluginButtons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="5dp"
+            android:background="#80ffffff"/>
+
+        <EditText
+            android:id="@+id/noteTitle"
+            android:textSize="24sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:inputType="textPersonName"
+            android:textStyle="normal|bold"
+            android:hint="@string/noteDisplayTitleHint" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="50dp"
+            android:background="#80ffffff"/>
 
         <TextView
             android:textSize="18sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/noteCreationDate"
-            android:layout_marginLeft="38dp"
-            android:layout_marginStart="38dp"
-            android:layout_marginTop="63dp" />
+            android:gravity="center"
+            android:id="@+id/noteCreationDate" />
 
         <TextView
+            android:paddingTop="5dp"
+            android:textSize="18sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:id="@+id/noteTitle"
-            android:layout_marginTop="18dp"
-            android:textAlignment="center"
-            android:textStyle="normal|bold" />
+            android:gravity="center"
+            android:layout_marginTop="10dp"
+            android:id="@+id/noteModificationDate" />
     </LinearLayout>
 
 
