--- a/IcyNote/app/src/main/res/layout/fragment_notes_list.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_notes_list.xml
@@ -42,6 +42,14 @@
 
         </RelativeLayout>
 
+        <TextView
+            android:id="@+id/emptyText"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:text="To start click on ADD in the bottom right corner"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:visibility="gone"/>
 
             <ListView
                 android:layout_width="match_parent"
