Reformat Preferences to be a Fragment, import the list of plugins correctly into the preferences (closes issue #101)

--- a/IcyNote/app/src/main/res/xml/preferences.xml
+++ b/IcyNote/app/src/main/res/xml/preferences.xml
@@ -3,6 +3,9 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:key="settings_main">
 
+    <Preference
+        android:enabled="false" />
+
     <PreferenceCategory
         android:title="General"
         android:key="general_group">
