--- a/IcyNote/app/src/main/res/menu/activity_main_drawer.xml
+++ b/IcyNote/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,7 +19,7 @@
             android:icon="@drawable/drawer_delete"
             android:alpha="0.5"
             android:title="@string/trash"
-            android:onClick="openListOfDeletedNotes"/>
+            android:onClick="openListOfTrashedNotes"/>
         <item
             android:id="@+id/menuSettings"
             android:icon="@drawable/drawer_settings"
