--- a/IcyNote/app/src/main/res/layout/activity_chooser.xml
+++ b/IcyNote/app/src/main/res/layout/activity_chooser.xml
@@ -15,11 +15,9 @@
         android:id="@+id/local_sign_in_button"
         android:onClick="localSignIn"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:theme="@style/ThemeOverlay.MyDarkButton" />
+        android:layout_centerHorizontal="true" />
 
     <ImageView
-        style="@style/ThemeOverlay.IcynoteIcon"
         android:id="@+id/google_icon"
         android:contentDescription="@string/desc_icynote_lockup"
         android:src="@drawable/icynote_lockup_400"
@@ -36,7 +34,6 @@
         android:id="@+id/googe_sign_in_button"
         android:onClick="googleSignIn"
         android:layout_below="@+id/local_sign_in_button"
-        android:layout_centerHorizontal="true"
-        android:theme="@style/ThemeOverlay.MyDarkButton" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
