--- a/IcyNote/app/src/main/res/layout/activity_emailpassword.xml
+++ b/IcyNote/app/src/main/res/layout/activity_emailpassword.xml
@@ -28,7 +28,6 @@
 
         <ImageView
             android:id="@+id/icon"
-            style="@style/ThemeOverlay.IcynoteIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/desc_icynote_lockup"
@@ -39,8 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/title_bottom_margin"
-            android:text="@string/emailpassword_title_text"
-            android:theme="@style/ThemeOverlay.MyTitleText" />
+            android:text="@string/emailpassword_title_text"/>
 <!--
         <TextView
             android:id="@+id/status"
@@ -102,16 +100,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/sign_in"
-                android:theme="@style/ThemeOverlay.MyDarkButton" />
+                android:text="@string/sign_in" />
 
             <Button
                 android:id="@+id/email_create_account_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/create_account"
-                android:theme="@style/ThemeOverlay.MyDarkButton" />
+                android:text="@string/create_account" />
         </LinearLayout>
 
     </RelativeLayout>
