--- a/IcyNote/app/src/main/res/xml/preferences.xml
+++ b/IcyNote/app/src/main/res/xml/preferences.xml
@@ -3,16 +3,16 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:key="settings_main">
 
-    <Preference
-        android:enabled="false" />
+
+    <!-- ******************* SORT ORDER ******************** -->
 
     <PreferenceCategory
         android:title="General"
         android:key="general_group">
+
         <ListPreference
             android:key="select_sort_by"
-            android:summary="set sorting for list of notes"
-            android:defaultValue="TITLE"
+            android:summary="choose attribute to use for sorting"
             android:title="Sort by"
             android:entries="@array/sort_by"
             android:entryValues="@array/sort_by_values"
@@ -20,40 +20,23 @@
             android:positiveButtonText="@null"/>
         <ListPreference
             android:key="select_sort_type"
-            android:summary="set sorting ascending / descending"
-            android:defaultValue="ASC"
+            android:summary="choose between ascending or descending"
             android:title="Sort order"
             android:entries="@array/sort_order"
             android:entryValues="@array/sort_order_values"
             android:negativeButtonText="@null"
             android:positiveButtonText="@null"/>
+        <Preference
+                android:key="account_action" />
     </PreferenceCategory>
 
-    <PreferenceCategory
-        android:title="Account"
-        android:key="account_group">
-        <PreferenceScreen
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:key="account_settings"
-            android:summary="adjust account settings"
-            android:title="Account">
-            <Preference
-                android:key="account_action" />
-            <Preference
-                android:key="account_delete"
-                android:title="Delete current account"/>
-        </PreferenceScreen>
-    </PreferenceCategory>
+
+    <!-- ******************* PLUGINS ******************** -->
 
     <PreferenceCategory
         android:title="Plugin"
         android:key="plugin_group">
-        <PreferenceScreen
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:key="plugin_settings"
-            android:summary="adjust plugin settings"
-            android:title="Plugin">
-        </PreferenceScreen>
+
     </PreferenceCategory>
 
 </PreferenceScreen>
