--- a/IcyNote/app/src/main/res/layout/item_note.xml
+++ b/IcyNote/app/src/main/res/layout/item_note.xml
@@ -36,7 +36,7 @@
             android:id="@+id/layout_1">
             <TextView
                 android:id="@+id/tvTitle"
-                android:text="Title"
+                android:text="@string/item_note_title"
                 android:textSize="@dimen/notesTitleSize"
                 android:textStyle="bold"
                 android:layout_height="wrap_content"
@@ -50,7 +50,7 @@
             android:id="@+id/tvDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Date"
+            android:text="@string/item_note_date"
             android:layout_below="@id/layout_1"
             />
 
@@ -58,7 +58,7 @@
             android:id="@+id/tvContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Content"
+            android:text="@string/item_note_content"
             android:layout_below="@id/layout_1"
             />
 
