Add icon for reopening the last note in the drawer

--- a/IcyNote/app/src/main/res/menu/activity_main_drawer.xml
+++ b/IcyNote/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,6 +12,7 @@
             android:onClick="openListOfNotes"/>
         <item
             android:id="@+id/menuLastNote"
+            android:icon="@drawable/drawer_reopen"
             android:alpha="0.5"
             android:title="@string/openLastNote"
             android:onClick="openLastOpenedNote"/>
