--- a/IcyNote/app/src/main/res/layout/fragment_metadata_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_metadata_note.xml
@@ -17,8 +17,23 @@
         android:layout_alignParentTop="true"
         android:id="@+id/backButton"
         android:onClick="reOpenEditNote"
-        android:background="@drawable/meta_back"
+        android:background="@drawable/ic_navigate_before_white_24dp"
         android:alpha="0.5"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="Back"
+        android:gravity="center"
+        android:textSize="@dimen/textSizeSpinner"
+        android:layout_marginStart="-5dp"
+        android:layout_marginLeft="-5dp"
+        android:alpha="0.5"
+        android:textColor="#ffffff"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/backButton"
+        android:layout_toEndOf="@+id/backButton"
+        android:id="@+id/textView" />
 
     <LinearLayout
         android:orientation="vertical"
