--- a/IcyNote/app/src/main/res/menu/notes_list_context_menu.xml
+++ b/IcyNote/app/src/main/res/menu/notes_list_context_menu.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item
-        android:id="@+id/delete_id"
-        android:title="@string/notes_list_context_menu_item_delete">
+    <item android:title="@string/notes_list_context_menu_item_delete">
     </item>
-    <item
-        android:id="@+id/retour_id"
-        android:title="@string/notes_list_context_menu_item_return">
+    <item android:title="@string/notes_list_context_menu_item_return">
     </item>
 
 </menu>
