--- a/IcyNote/app/src/main/res/layout/fragment_metadata_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_metadata_note.xml
@@ -21,7 +21,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:text="Back"
+        android:text="@string/metadata_note_back_text"
         android:gravity="center"
         android:textSize="@dimen/textSizeSpinner"
         android:layout_marginStart="-5dp"
