Fix lint issues in activity_emailpassword layout

--- a/IcyNote/app/src/main/res/layout/activity_emailpassword.xml
+++ b/IcyNote/app/src/main/res/layout/activity_emailpassword.xml
@@ -18,12 +18,25 @@
     android:orientation="vertical"
     android:weightSum="4">
 
-    <LinearLayout
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0sp"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="100dp"
+        android:layout_weight="2"
+        android:gravity="center|top"
+        android:text="@string/email_password_title_text"
+        android:drawableTop="@drawable/icynote_lockup_400"
+        />
+
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
         android:gravity="center_horizontal"
         android:orientation="vertical">
+
 
         <ImageView
             android:id="@+id/icon"
@@ -36,8 +49,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/title_bottom_margin"
-            android:text="@string/emailpassword_title_text"/>
-<!--
+            android:text="@string/email_password_title_text"/>
+&lt;!&ndash;
         <TextView
             android:id="@+id/status"
             style="@style/ThemeOverlay.MyTextDetail"
@@ -49,14 +62,15 @@
             style="@style/ThemeOverlay.MyTextDetail"
             tools:text="Icynote User ID: 123456789abc"
             android:textColor="@color/black" />
--->
-    </LinearLayout>
+&ndash;&gt;
+    </LinearLayout>-->
+
 
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:gravity="center_vertical">
 
         <LinearLayout
@@ -85,6 +99,7 @@
         </LinearLayout>
 
         <LinearLayout
+            style="?android:attr/buttonBarStyle"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/email_password_fields"
@@ -93,18 +108,24 @@
             android:paddingRight="16dp">
 
             <Button
+                style="?android:attr/buttonBarButtonStyle"
                 android:id="@+id/email_sign_in_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/sign_in" />
+                android:text="@string/sign_in"
+                android:background="@color/backgroundButton"
+                android:layout_margin="5dp"/>
 
             <Button
+                style="?android:attr/buttonBarButtonStyle"
                 android:id="@+id/email_create_account_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/create_account" />
+                android:text="@string/create_account"
+                android:background="@color/backgroundButton"
+                android:layout_margin="5dp" />
         </LinearLayout>
 
     </RelativeLayout>
