--- a/IcyNote/app/src/main/res/values/colors.xml
+++ b/IcyNote/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="backgroundButton">#666666</color>
     <!--
     <color name="colorPrimary">#84ffff</color>
     <color name="colorPrimaryDark">#469be4</color>
