--- a/IcyNote/app/src/main/res/layout/fragment_trashed_notes.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_trashed_notes.xml
@@ -73,6 +73,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/btRestore"
                 android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:enabled="false"/>
