--- a/IcyNote/app/src/main/res/layout/item_note.xml
+++ b/IcyNote/app/src/main/res/layout/item_note.xml
@@ -10,12 +10,13 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_marginRight="5sp"
+        android:layout_marginEnd="5sp"
         android:paddingTop="5sp"/>
 
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:id="@+id/item_content"
