Restrict some fields to private instead of public

--- a/IcyNote/app/src/main/res/layout/item_note.xml
+++ b/IcyNote/app/src/main/res/layout/item_note.xml
@@ -34,7 +34,7 @@
                 android:textSize="@dimen/notesTitleSize"
                 android:textStyle="bold"
                 android:layout_height="wrap_content"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_weight="0.8"/>
 
         </LinearLayout>
