Make buttons in Notes List littler

--- a/IcyNote/app/src/main/res/layout/fragment_notes_list.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_notes_list.xml
@@ -77,6 +77,8 @@
                 android:text="@string/loading"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
+                android:layout_marginLeft="40sp"
+                android:layout_marginRight="40sp"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
                 />
