Rename button source images (related to issue #125)

--- a/IcyNote/app/src/main/res/layout/fragment_metadata_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_metadata_note.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:id="@+id/backButton"
-        android:background="@drawable/ic_navigate_before_white_24dp"
+        android:background="@drawable/meta_back"
         android:alpha="0.5"/>
 
     <TextView
