--- a/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
@@ -39,7 +39,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:alpha="0.5"
-        android:src="@drawable/ic_more_vert_white_24dp"
+        android:src="@drawable/note_open_meta"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
