--- a/IcyNote/app/src/main/res/layout/fragment_edit_tags.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_edit_tags.xml
@@ -16,4 +16,18 @@
 
     <include layout="@layout/menu_button"/>
 
+    <!--
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    <me.gujun.android.taggroup.TagGroup
+        android:id="@+id/noteDisplayTagsText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        style="@style/TagGroup"
+        app:atg_isAppendMode="true"
+        app:atg_inputHint="add ..."
+        android:imeOptions="actionDone" />
+    -->
+
 </FrameLayout>
