--- a/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_edit_note.xml
@@ -71,6 +71,32 @@
         android:layout_alignParentEnd="true"
         android:imeOptions="actionDone"/>
 
+    <ImageView
+        android:id="@+id/note_refresh"
+        android:contentDescription="@string/menuRefresh"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:alpha="0.5"
+        android:src="@drawable/note_refresh"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="@dimen/refresh_margin"
+        android:layout_marginRight="@dimen/refresh_margin"
+        android:layout_marginBottom="@dimen/refresh_margin"/>
+
+    <Button
+        android:id="@+id/noteRefreshButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:alpha="0"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="@dimen/refresh_margin"
+        android:layout_marginRight="@dimen/refresh_margin"
+        android:layout_marginBottom="@dimen/refresh_margin" />
+
     <LinearLayout android:focusable="true"
         android:focusableInTouchMode="true"
         android:layout_width="0px"
