--- a/IcyNote/app/src/main/res/layout/fragment_metadata_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_metadata_note.xml
@@ -8,15 +8,25 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="icynote.ui.fragments.MetadataNote">
 
-    <Button
+    <ImageView
+        android:id="@+id/metadata_back"
+        android:contentDescription="@string/menuBack"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:alpha="0.5"
+        android:background="@drawable/meta_back"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentTop="true" />
+
+    <Button
         android:id="@+id/backButton"
-        android:background="@drawable/meta_back"
-        android:alpha="0.5"/>
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:alpha="0"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
     <TextView
         android:layout_width="wrap_content"
