Improve layout of metadata (#127)

--- a/IcyNote/app/src/main/res/layout/fragment_metadata_note.xml
+++ b/IcyNote/app/src/main/res/layout/fragment_metadata_note.xml
@@ -33,7 +33,7 @@
         android:layout_height="50dp"
         android:text="@string/metadata_note_back_text"
         android:gravity="center"
-        android:textSize="@dimen/textSizeSpinner"
+        android:textSize="@dimen/textSizeVarious"
         android:layout_marginStart="-5dp"
         android:layout_marginLeft="-5dp"
         android:alpha="0.5"
@@ -48,19 +48,47 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp">
+        android:layout_marginTop="70dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/metadata_note_plugins_title"
+            android:textSize="@dimen/textSizeVarious"
+            android:textStyle="normal|bold"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginBottom="5dp"
+            android:background="#80ffffff"/>
 
         <LinearLayout
             android:id="@+id/pluginButtons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
             android:orientation="horizontal" >
         </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/metadata_note_edit_title_title"
+            android:textSize="@dimen/textSizeVarious"
+            android:textStyle="normal|bold"
+            android:layout_marginTop="20dp"/>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:layout_marginTop="20dp"
             android:layout_marginBottom="5dp"
             android:background="#80ffffff"/>
 
@@ -69,16 +97,26 @@
             android:textSize="24sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:inputType="textPersonName"
             android:textStyle="normal|bold"
-            android:hint="@string/noteDisplayTitleHint" />
+            android:hint="@string/noteDisplayTitleHint"
+            android:inputType="textMultiLine"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/metadata_note_info_title"
+            android:textSize="@dimen/textSizeVarious"
+            android:textStyle="normal|bold"
+            android:layout_marginTop="20dp"/>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="5dp"
             android:background="#80ffffff"/>
 
         <TextView
@@ -86,6 +124,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:layout_marginTop="5dp"
             android:id="@+id/noteCreationDate" />
 
         <TextView
@@ -94,7 +133,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:id="@+id/noteModificationDate" />
     </LinearLayout>
 
